---- Changes since 1.450 ----
Fixed the Hostname and DNS Client page on FreeBSD to edit /etc/nsswitch.conf instead of the older host.conf, when available.
When changing the hostname on Debian or Ubuntu, update /etc/mailname too.
---- Changes since 1.460 ----
Fixed editing of bonding network interfaces on Debian Linux.
---- Changes since 1.470 ----
Fixed network interface management on SuSE 10.2.
Updated the Hostname and DNS Client page to always show the hostname from config files, rather than the system's short hostname.
On Debian systems, if the dns-nameservers option is defined in /etc/network/interfaces, it will be updated when changing nameservers.
---- Changes since 1.480 ----
Updated bonding support to use the new format in Debian 5.0, thanks to Caspar Smit.
---- Changes since 1.500 ----
Added a field for editing the MAC address to apply at boot time on Redhat and Debian-based systems.
Include hostname configuration files in backups, thanks to Caspar Smit.
---- Changes since 1.530 ----
Static IPv6 addresses and default routes on Redhat, CentOS, Fedora, Debian and Ubuntu Linux systems, and Solaris can now be viewed and managed.
---- Changes since 1.550 ----
The speed, link status and duplex of active ethernet interfaces is now shown on the active interfaces page.
On Debian, Ubuntu, Redhat, CentOS and Fedora systems boot-time network interfaces with no IP address can now be created. You can also create network bridges that are connected to ethernet interfaces with no address, for use by virtual machines such as KVM.
---- Changes since 1.570 ----
If Postfix is installed when the hostname is changed, the mydestination (local hostname) configuration parameter is updated too.
---- Changes since 1.580 ----
Allowed the MTU to be set at boot time on Debian Linux, and fixed bugs editing VLANs, thanks to a patch from Caspar Smit.
---- Changes since 1.590 ----
Bonding interfaces can now be created on CentOS, Redhat and Fedora Linuxes, thanks to a patch from Caspar Smit.