@@ -311,8 +311,13 @@ else {
 		}
 
 	# Save the interface with its final name
-	$b->{'fullname'} = $b->{'name'}.
-		( $b->{'virtual'} eq '' ? '' : ':'.$b->{'virtual'});
+	if ($in{'vlan'} == 1) {
+		$b->{'fullname'} = $in{'physical'}.".".$in{'vlanid'};
+		}
+	else {
+		$b->{'fullname'} = $b->{'name'}.
+				( $b->{'virtual'} eq '' ? '' : ':'.$b->{'virtual'});
+	}
 	&save_interface($b);
 
 	if ($in{'activate'}) {
